--- a/languages/en.json
+++ b/languages/en.json
@@ -18,7 +18,7 @@
         "contacts_santo_tirso": "Contacts",
         "contacts": "Contacts",
         "ds": "Dra. Dília Soares",
-        "gallery": "OPorto Gallery",
+        "gallery": "Oporto Gallery",
         "galleryST": "S.Tirso Gallery",
         "gv": "Dra. Gabriela Vasconcellos",
         "index": "Home",
@@ -71,8 +71,8 @@
             "title": "Call us:",
             "landline": "225 432 135",
             "number": "915 424 413",
-            "text": "Telephone assistance",
-            "text2": "for 24h emergency"
+            "text": "24H Emergency",
+            "text2": "Telephone assistance"
         }
     },
     "ac": {
@@ -136,23 +136,23 @@
         "medis": {
             "title": "Médis - Companhia Portuguesa de Seguros de Saúde, S.A.",
             "text": "Visit the ",
-            "link": "website Médis",
+            "link": "Médis website",
             "text2": "Health insurance from the following insurance companies:"
         },
         "rna": {
             "title": "RNA Medical",
             "text": "Visit the ",
-            "link": "website RNA Medical"
+            "link": "RNA Medical website"
         },
         "samsSib": {
             "title": "SAMS-SIB",
             "text": "Visit the ",
-            "link": "website SAMS-SIB"
+            "link": "SAMS-SIB website"
         },
         "ami": {
             "title": "Assistência Médica Internacional",
             "text": "Visit the ",
-            "link": "website AMI"
+            "link": "AMI website"
         }
     },
     "contactsSantoTirso": {
@@ -203,8 +203,8 @@
         "languagesItems": " Portuguese, English and Spanish",
         "illnesses": "Diseases:",
         "illnessesItems": " Obesity, Diabetes and Dyslipidemias",
-        "appointment": "Consultations:",
-        "appointmentItems": " Nutrition Consultation",
+        "appointment": "appointments:",
+        "appointmentItems": " Nutrition appointment",
         "areasOfDifferentiation": "Areas of Differentiation:",
         "areasOfDifferentiationItems": " Nutrition in pregnancy, nutrition in gestational diabetes, and nutrition in metabolic diseases",
         "schecule": {
@@ -216,7 +216,7 @@
             "title": "Clinical Activity",
             "l1": "Since 2012 - Nutritionist at OBER",
             "l2": "03/2012 to 02/2016 - Nutritionist at Santa Casa da Misericórdia de Baião",
-            "l3": "Since 2011 - Nutrition Consultation and Body Composition Assessment at Gynébe Clinic Porto",
+            "l3": "Since 2011 - Nutrition appointment and Body Composition Assessment at Gynébe Clinic Porto",
             "l4": "11/2003 a 08/2004 - Elaboration of a Nutrition Activities Plan for the Health Center of Paredes",
             "l5": "Since 2002 - Consultant in Clinical Nutrition and elaboration of the Hospital Diet Manual at Hospital das Forças Armadas do Porto",
             "l6": "10/1999 to 09/2000 - Academic internship conducted at the Endocrinology Unit of the São João Hospital in Porto."
@@ -239,29 +239,29 @@
     },
     "gallery": {
         "title": "Gynébe Clinic in Oporto",
-        "text": "The Gynébe Clinic was born in 2003 in the heart of Porto as a space dedicated essentially to women's and children's health. In 2005 a second unit opened in Santo Tirso. Both clinics offer a central location with excellent accessibility on foot, by public transportation or by own car, given the ease of several nearby parks.",
+        "text": "The Gynébe Clinic was born in 2003 in the heart of Porto as a space dedicated essentially to women's and children's health. In 2005 a second unit opened in Santo Tirso. Both clinics offer a central location with excellent accessibility on foot, by public transportation or by own car with several nearby carparks.",
         "images": {
-            "text": "Sala de",
-            "waitRoom": "Espera",
-            "area": "Área Interna",
-            "ped": "Pediatria",
-            "exams": "Exames",
-            "gyne": "Ginecologia e Obstetrícia",
+            "text": "",
+            "waitRoom": "Waiting Room",
+            "area": "Restricted area",
+            "ped": "Pediatrics",
+            "exams": "Exams",
+            "gyne": "Gynecology/Obstetrics",
             "copa": "Copa",
-            "babyChangingRoom": "Fraldário/",
-            "toilet": "Quarto de Banho",
-            "sterilization": "Esterilização"
+            "babyChangingRoom": "Baby Changing",
+            "toilet": "Toilet",
+            "sterilization": "Sterilization"
         }
     },
     "galleryST": {
         "title": "Gynébe Clinic of Santo Tirso",
-        "text": "The Gynébe Clinic was born in 2003 in the heart of Porto as a space dedicated essentially to women's and children's health. In 2005 a second unit opened in Santo Tirso. Both clinics offer a central location with excellent accessibility on foot, by public transportation or by own car, given the ease of several nearby parks.",
+        "text": "The Gynébe Clinic was born in 2003 in the heart of Porto as a space dedicated essentially to women's and children's health. In 2005 a second unit opened in Santo Tirso. Both clinics offer a central location with excellent accessibility on foot, by public transportation or by own car with several nearby carparks.",
         "images": {
-            "text": "Sala de",
-            "waitRoom": "Espera",
-            "logoText": "Logo da",
+            "text": "",
+            "waitRoom": "Waiting Room",
+            "logoText": "Logo ",
             "logo": "Clínica Gynébe",
-            "gyne": "Ginecologia e Obstetrícia"
+            "gyne": "Gynecology/Obstetrics"
         }
     },
     "gv": {
@@ -272,8 +272,8 @@
         "languagesItems": " Portuguese, English and French",
         "illnesses": "Diseases:",
         "illnessesItems": "Neonatal Jaundice",
-        "appointment": "Consultations:",
-        "appointmentItems": " Neonatology Consultation - Pediatric Consultation - Prenatal Consultation with a Pediatrician - Pediatric Teleconsultation",
+        "appointment": "Appointments:",
+        "appointmentItems": " Neonatology appointment - Pediatric appointment - Prenatal appointment with a Pediatrician - Pediatric Remote appointment",
         "areasOfDifferentiation": "Areas of Differentiation:",
         "areasOfDifferentiationItems": " Neonatology",
         "schecule": {
@@ -329,11 +329,11 @@
             },
             "gv": {
                 "name": "Dra. Gabriela Vasconcellos",
-                "specialty": "Pediatra/Neonatologista"
+                "specialty": "Pediatrician/Neonatologist"
             },
             "ac": {
                 "name": "Dra. Ana Carriço",
-                "specialty": "Pediatrician/Neonatologist"
+                "specialty": "Pediatric Cardiologist"
             },
             "lc": {
                 "name": "Dra. Leonilde Coelho",
@@ -359,14 +359,14 @@
         "bestCare": {
             "title": "The Best Health Care",
             "first": "Personalized service",
-            "second": "Consultations in Portuguese, English and Spanish",
+            "second": "appointments in Portuguese, English and Spanish",
             "third": "Children's Space",
             "fourth": "Strong human component of all professionals",
             "fifth": "Professionals with high clinical experience",
             "sixth": "Easy access for people with reduced mobility",
             "seventh": "Respect for individuality and personal sensitivity",
             "eighth": "Technical differentiation of the services provided",
-            "ninth": "Location in the heart of OPorto city",
+            "ninth": "Location in the heart of Oporto city",
             "tenth": "Comprehensive women's, child, and family health services",
             "eleventh": "Recognition of the services provided by our users",
             "twelfth": "Agreements and Partnerships with most conventions"
@@ -380,8 +380,8 @@
         "languagesItems": " Portuguese",
         "illnesses": "Diseases:",
         "illnessesItems": " Diabetes, Thyroid Pathology",
-        "appointment": "Consultations:",
-        "appointmentItems": " Endocrinology Consultation - Diabetes Consultation - Multidisciplinary Bariatric Surgery Consultation",
+        "appointment": "Appointments:",
+        "appointmentItems": " Endocrinology appointment - Diabetes appointment - Multidisciplinary Bariatric Surgery appointment",
         "areasOfDifferentiation": "Areas of Differentiation:",
         "areasOfDifferentiationItems": " Diabetes and Bariatric Surgery",
         "schecule": {
@@ -392,7 +392,7 @@
         "clinicalActivity": {
             "title": "Clinical Activity",
             "l1": "Since 2008 - Graduated Assistant in Endocrinology.",
-            "l2": "Since 2006 - Collaboration in the Multidisciplinary Consultation of Diabetes and Thyroid Pathology in Pregnancy at Gynébe Clinic in Porto",
+            "l2": "Since 2006 - Collaboration in the Multidisciplinary appointment of Diabetes and Thyroid Pathology in Pregnancy at Gynébe Clinic in Porto",
             "l3": "Since 2005 - Hospital Assistant in Endocrinology at Hospital Militar do Porto, now called Hospital das Forças Armadas - Pólo do Porto.",
             "l4": "2001-2005 - Hospital Assistant of Endocrinology at S. Marcos Hospital - Braga.",
             "l5": "2000 - Eventual Assistant of Endocrinology at IPO-Porto.",
@@ -421,24 +421,24 @@
         "languages": "Languages:",
         "languagesItems": " Portuguese",
         "illnesses": "Diseases:",
-        "illnessesItems": " Ansiedade e/ou depressão, Distúrbios do sono, Problemas conjugais, Depressão pós-parto, Problemas de fertilidade, Dificuldades parentais, Separação e divórcio",
-        "appointment": "Consultations:",
-        "appointmentItems": " Clinical Psychology Consultation - Psychology Teleconsultation",
+        "illnessesItems": " Anxiety or depression, sleep issues, marital issues, postpartum depression, Infertility, parental difficulties, separation and divorce",
+        "appointment": "Appointments:",
+        "appointmentItems": " Clinical Psychology Appointments - Psychology Remote appointment",
         "areasOfDifferentiation": "Areas of Differentiation:",
         "areasOfDifferentiationItems": " Psychotherapeutic intervention in children, youth and adults",
         "schecule": {
             "title": "Schedule:",
             "tuesday": "Tuesday:",
-            "tuesdayItems": " 10h-13h (Teleconsultation)",
+            "tuesdayItems": " 10h-13h (Remote appointment)",
             "thursday": "Thursday:",
-            "thursdayItems": " 16h-20h (Teleconsultation)",
+            "thursdayItems": " 16h-20h (Remote appointment)",
             "friday": "Friday:",
             "fridayItems": " 16h-20h (Face-to-face consultation at Oporto Clinic)"
         },
         "clinicalActivity": {
             "title": "Clinical Activity",
             "l1": "She works in the field of Clinical and Health Psychology in psychometric diagnosis, psycho-pedagogical and psychotherapeutic monitoring of children, youth and adults in the Clinical Psychology Office.",
-            "l2": "Since 2006, she is responsible for the Psychology Consultation at the Gynébe Clinic. Within the Psychology Consultation, and in collaboration with the professionals working in this clinic, she has developed psychological assessment/intervention activities for children, youth and adults at risk due to emotional and/or learning problems, parenting disorders, infertility problems in couples, postpartum depression, sexual and marital problems, separation and divorce.",
+            "l2": "Since 2006, she is responsible for the Psychology appointment at the Gynébe Clinic. Within the Psychology appointment, and in collaboration with the professionals working in this clinic, she has developed psychological assessment/intervention activities for children, youth and adults at risk due to emotional and/or learning problems, parenting disorders, infertility problems in couples, postpartum depression, sexual and marital problems, separation and divorce.",
             "l3": "Worked in the field of Child and Youth Clinical Psychology in psychometric diagnosis, psychotherapeutic and psycho-pedagogical follow-up at the Marco de Canaveses Medical-Surgical Clinic (1989-1990).",
             "l4": "Participated in the Interministerial Program for the Promotion of Educational Success in Basic Education (Ministry of Education), being the modalities of action and its evaluation in the field of psycho-pedagogical stimulation of the community, teaching agents, parents and students (1988-1992).",
             "l5": "Specialty training in Psychotherapy: 2nd year of the Post-Graduation Course by the Portuguese Society of Clinical Psychology (1991-1993)."
@@ -465,8 +465,8 @@
         "languagesItems": " Portuguese, English and Spanish",
         "illnesses": "Diseases:",
         "illnessesItems": " Genital Diseases of the Female Genital Tract, Pregnancy, Infertility, Menopause",
-        "appointment": "Consultations:",
-        "appointmentItems": " Gynecology Consultation - Obstetrics Consultation - Gynecology Teleconsultation",
+        "appointment": "Appointments:",
+        "appointmentItems": " Gynecology appointment - Obstetrics appointment - Gynecology remote appointment",
         "areasOfDifferentiation": "Areas of Differentiation:",
         "areasOfDifferentiationItems": " High Risk Pregnancy, Sexuality, Infertility Study, Gynecological and Obstetrical Ultrasound, Surgeries and Births",
         "schecule": {
@@ -484,7 +484,7 @@
             "title": "Clinical Activity",
             "l1": "2013 - Graduate Assistant in Obstetrics (Consultant Degree)",
             "l2": "Since 2003 - Clinical Director at Clinica Gynébe",
-            "l3": "2000-2006 - Obstetrics Assistant, responsible for Laparoscopic Surgery and High Risk Consultation, Braga Hospital",
+            "l3": "2000-2006 - Obstetrics Assistant, responsible for Laparoscopic Surgery and High Risk appointment, Braga Hospital",
             "l4": "Since 2000 - Has worked in the private sector, namely in clinics and several private hospitals.",
             "l5": "1999-2000 - Assistant in Gynecology and Obstetrics, Santo António Hospital, Porto",
             "l6": "1992-1998 - Additional internship, Santo António Hospital, Porto",
@@ -545,7 +545,7 @@
             "list3": "Uterine Bleedings",
             "list4": "Uterine Myomas",
             "list5": "Endometriosis",
-            "list6": "Study of Couple Infertility",
+            "list6": "Study of the Couple Infertility",
             "list7": "Menopause",
             "list8": "3D/4D Gynecological Ultrasound",
             "list9": "Minor Surgery",
@@ -568,7 +568,7 @@
         "ped": {
             "title": "Pediatrics",
             "text": "Pediatrics follows the newborn from birth through early adulthood. Regular follow-up in Pediatrics aims at the healthy growth and promotion of the physical and psychological well-being of children and adolescents, acting with preventive and curative character.",
-            "text2": "Pediatrics consultation encompasses a wide area, such as:",
+            "text2": "Pediatrics encompasses a wide area, such as:",
             "list1": "Healthy and adequate growth and development",
             "list2": "Dietary advice",
             "list3": "Vaccination counseling",
@@ -579,7 +579,7 @@
             "title": "Endocrinology",
             "text": "Endocrinology is the medical specialty dedicated to the diagnosis and treatment of disorders of the endocrine system, composed of the hormone-producing glands responsible for normal development, reproduction, and metabolism.",
             "text2": "The thyroid, pancreas, pituitary glands, adrenals, parathyroid glands, ovaries, and testes are the best known endocrine glands, but bone and adipose tissue also play an important role in the production of hormones.",
-            "text3": "The situations that most bring the patient to the consultation are:",
+            "text3": "The situations that most bring the patient to the practise are:",
             "list1": "Diabetes",
             "list2": "Obesity",
             "list3": "Metabolic disease",
@@ -598,15 +598,15 @@
             "list3": "Learning Problems",
             "list4": "Difficulty in Higher Education",
             "list5": "Work Problems",
-            "list6": "Marital Problems",
+            "list6": "Marital Issues",
             "list7": "Postpartum Depression",
-            "list8": "Infertility Problems",
+            "list8": "Infertility",
             "list9": "Parental Difficulties",
             "list10": "Separation and Divorce"
         },
         "nut": {
             "title": "Nutrition",
-            "text": "In the nutrition consultation, the nutritional needs are evaluated and the dietary planning is customized to each situation and specific goal.",
+            "text": "In our nutrition appointments, the nutritional needs are evaluated and the dietary planning is customized to each individual situation and specific goal.",
             "text2": "Learning to have healthy eating habits, in addition to weight loss, aims at improving the quality of physical and emotional life, as well as the most diverse pathologies.",
             "text3": "Nutritionists work closely with other health professionals and in particular with endocrinology."
         }
