--- a/languages/es.json
+++ b/languages/es.json
@@ -76,7 +76,7 @@
         "phone": {
             "title": "Llámenos:",
             "landline": "225 432 135",
-            "number": "915 42413"
+            "number": "915 424 413"
         }
     },
     "ac": {
